# LA1

./: README.md
Projeto/: CMakeLists.txt  main.c
Projeto/Dados/: dados.c  dados.h  list.c  list.h
Projeto/Interface/: interface.c  interface.h
Projeto/Logica/: logica.c  logica.h
Projeto/Teste/: teste.c  teste.h
